added styling to prevent text from surpassing panel length

--- a/index.html
+++ b/index.html
@@ -10,13 +10,6 @@
   <!-- Font Awesome CSS Icons (For cool glyphicons) -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-  <!-- Style to fix the issue of text extending past panel length -->
-  <style>
-    .panel-body a {
-      word-break: break-all;
-    }
-  </style>
-
   <!-- Added Moment JS -->
   <script src="https://cdn.jsdelivr.net/npm/moment@2.20.1/moment.min.js"></script>
 
@@ -28,6 +21,9 @@
 
   <!-- Code to the JavaScript File -->
   <script src="assets/javascript/script.js"></script>
+  
+  <!-- Link to the CSS File -->
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css"> 
 
 </head>
 
